--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="icon" type="image/png" sizes="192x192" href="./decentLogo192.png">
     <link rel="manifest" href="./manifest.json">
     <link rel="script" href="./serviceWorker.js">
-    <title>Encounters</title>
+    <title>ZorC - the one with the nymph</title>
   </head>
   <body>
     <div id="root"></div>
